# picasso

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  tensorflowjs-4.0.0-py3-none-any.whl  test_app.py
app/: .prettierrc  index.d.ts  package.json  tsconfig.json  webpack.config.js
app/public/: index.html
app/public/mobilenet/web_model/: model.json
app/src/: App.tsx  index.css  index.tsx
app/src/components/: Carousel.tsx  DisplayCard.tsx  Frame.tsx  Landing.tsx  NavBar.tsx  Process.tsx  Result.tsx  SourceImageSelector.tsx  StyleImageSelector.tsx  Styles.ts  Stylize.tsx  api.ts  processor.tsx
app/src/components/css/: Carousel.css
stylize/: __init__.py  styles.json  utils.py
