[tool.poetry]
name = "picasso"
version = "0.1.0"
description = "A beautiful project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.6,<3.11"
httptools = "^0.4.0"
tensorflow-gpu = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
